kubernetes/bootstrap/argocd/argocd-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-loadbalancer
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.home.lab
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: argocd-server
