kubernetes/bootstrap/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.home.paulynomial.com
    hajimari.io/enable: "true"
    hajimari.io/appName: "ArgoCD"
    hajimari.io/icon: "simple-icons:argo"
    hajimari.io/group: "Infrastructure"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serverstransport: argocd-insecure-transport@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.home.paulynomial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
